--- a/css/style.css
+++ b/css/style.css
@@ -395,3 +395,25 @@ profileページ
 .mb_m {
   margin-bottom: 20px;
 }
+
+/*======================================================
+2022/07/22松本追加
+======================================================*/
+
+#topback{
+  background-color: #fff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 100;
+}
+
+#topback img{
+  width: 200px;
+  max-width: 50%;
+}
